# arc-agi

./: README.md  env  execute.py  main.py  prompts.py  pyproject.toml
results/evolutionary/: 0c9aba6e.txt  0e671a1a.txt  1d398264.txt  2b01abd0.txt  4acc7107.txt  4ff4c9da.txt  50f325b5.txt  5ffb2104.txt  62b74c02.txt  642d658d.txt
results/evolutionary_transduction/: 0c9aba6e.txt  0e671a1a.txt  1d398264.txt  2b01abd0.txt  4acc7107.txt  4ff4c9da.txt  50f325b5.txt  5ffb2104.txt  62b74c02.txt  642d658d.txt
results/hybrid/: 0c9aba6e.txt  0e671a1a.txt  1d398264.txt  2b01abd0.txt  4acc7107.txt  4ff4c9da.txt  50f325b5.txt  5ffb2104.txt  62b74c02.txt  642d658d.txt
sample_data/: 1d398264.json
