[tool.poetry]
name = "arc-agi"
version = "0.1.0"
description = ""
authors = ["sunguroku <trevor@porter.run>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
torch = "^2.5.1"
fairscale = "^0.4.13"
fire = "^0.7.0"
blobfile = "^3.0.0"
openai = "^1.59.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
